did some css change

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div style="text-align:center" role="banner">
   <h1 class="main-head">
     Welcome to {{ title }}!
   </h1>
-  <img alt="tavisca Logo" src="./assets/images/logo.png" width="200">
+  <img alt="tavisca logo" src="./assets/images/logo.png" width="200">
 </div>
 <app-search></app-search>
 <app-search-results></app-search-results>
