--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -35,7 +35,7 @@
 }
 
 .search input, .search select {
-    min-width: 250px;
+    max-width: 250px;
     width: auto;
     height: 40px;
     padding: 8px 12px;
